k8s/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: wordpress-deployment
spec: 
  replicas: 4
  selector: 
    matchLabels: 
      component: web
  template: 
    metadata: 
      labels: 
        component: web
    spec:
      volumes:
        - name: code
          emptyDir: {} 
        - name: sock
          emptyDir: {}
      containers: 
        - 
          image: franslourens/nginx-wordpress
          name: nginx
          imagePullPolicy: Always
          ports: 
            - 
              containerPort: 80
          volumeMounts:
            - 
              name: code
              mountPath: /var/www/html
            - 
              name: sock
              mountPath: /socket
        - 
          image: franslourens/php-wordpress
          imagePullPolicy: Always
          name: fpm
          volumeMounts:
            - 
              name: code
              mountPath: /var/www/html
            - 
              name: sock
              mountPath: /socket
