k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - franslourens.co.za
        - www.franslourens.co.za
        - staging.franslourens.co.za
  rules:
    - host: franslourens.co.za
      http:
        paths:
          - path: /
            backend:
              serviceName: wordpress-cluster-ip-service
              servicePort: 80
    - host: www.franslourens.co.za
      http:
        paths:
          - path: /
            backend:
              serviceName: wordpress-cluster-ip-service
              servicePort: 80
    - host: staging.franslourens.co.za
      http:
        paths:
          - path: /
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 80
